--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1847,17 +1847,82 @@ section {
 --------------------------------------------------------------*/
 .footer {
   overflow: hidden;
-  background: rgba(var(--color-black-rgb), 0.9);
+  background-color: #fff;
   font-size: 16px;
-  color: rgba(var(--color-white-rgb), 0.7);
+  padding: 60px 0;
+  color: #777;
 }
+
+.footer .footer-cta {
+  background-color: #0a2640;
+  padding: 60px;
+  text-align: center;
+  margin-bottom: 30px;
+  border-radius: 12px;
+}
+
+.footer .footer-cta h1{
+  font-size: 48px;
+  line-height: 72px;
+  font-weight: 400;
+  margin: 20px auto;
+  max-width: 800px;
+  color: #fff;
+}
+.footer .footer-cta .form {
+  max-width: 800px;
+  margin: 30px auto;
+}
+.footer .footer-cta .form-control {
+  width: 450px;
+  border-radius: 56px;
+  padding: 30px !important;
+  margin-right: 20px;
+  color: #777;
+  font-size: 20px;
+}
+.footer .footer-cta .btn {
+  background: #65E4A3;
+  color: #0a2640;
+  padding: 16px 29px;
+  font-size: 20px;
+  line-height: 28px;
+  font-weight: 700;
+  border-radius: 56px;
+  margin-left: 20px;
+}
+
+
+@media(max-width:992px){
+  .footer .footer-cta h1{
+    font-size: 28px;
+    line-height: 40px;
+    font-weight: 400;
+    margin: 20px auto;
+    max-width: 800px;
+    color: #fff;
+  }
+  .footer .footer-cta .form-control {
+    max-width: 220px;
+    border-radius: 56px;
+    padding: 30px !important;
+    margin-right: 20px;
+    color: #777;
+    font-size: 20px;
+  }
+  .footer .footer-cta .btn {
+    width: 170px;
+  }
+}
+
+
 
 .footer .footer-content {
   padding: 60px 0;
 }
 
 .footer a.footer-link-more {
-  color: rgba(var(--color-white-rgb), 0.7);
+  color: #777;
   display: inline-block;
   position: relative;
 }
@@ -1869,32 +1934,38 @@ section {
   left: 0;
   right: 0;
   height: 1px;
-  background: var(--color-white);
+  background: var(--color-black);
 }
 
 .footer a.footer-link-more:hover {
-  color: rgba(var(--color-white-rgb), 1);
+  color: rgba(var(--color-black-rgb), 1);
 }
 
 .footer .footer-heading {
-  color: var(--color-white);
+  color: #000;
   margin-bottom: 20px;
   padding-bottom: 10px;
-  font-size: 18px;
+  font-size: 20px;
+  line-height: 28px;
+  font-weight: 700;
 }
 
-.footer .footer-blog-entry li {
+.footer .footer-content li {
   margin-bottom: 20px;
   display: block;
+  font-size: 20px;
+  line-height: 32px;
+  font-weight: 400;
 }
 
-.footer .footer-blog-entry li a .post-meta {
-  font-size: 10px;
-  letter-spacing: 0.07rem;
-  text-transform: uppercase;
-  font-weight: 400;
-  font-family: var(--font-secondary);
-  color: rgba(var(--color-white-rgb), 0.4);
+.footer .footer-content li a span {
+  font-size: 13px;
+  font-weight: 700;
+  line-height: 28px;
+  background: #65E4A3;
+  padding: 6px 12px;
+  border-radius: 25px;
+  color: #0A2640;
   margin-bottom: 0px;
 }
 
@@ -1904,20 +1975,20 @@ section {
 }
 
 .footer .footer-links li {
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 .footer .footer-links li a {
-  color: rgba(var(--color-white-rgb), 0.7);
+  color: rgba(var(--color-black-rgb), 0.7);
 }
 
 .footer .footer-links li a:hover,
 .footer .footer-links li a:focus {
-  color: rgba(var(--color-white-rgb), 1);
+  color: rgba(var(--color-black-rgb), 1);
 }
 
 .footer .footer-legal {
-  background: var(--color-black);
+  background: #fff;
   padding: 40px 0;
 }
 
@@ -1926,18 +1997,22 @@ section {
   display: inline-block;
   width: 40px;
   height: 40px;
-  background-color: rgba(var(--color-white-rgb), 0.09);
+  background-color: rgba(var(--color-black-rgb), 0.09);
   border-radius: 50%;
   color: var(--color-white);
   line-height: 40px;
 }
 
 .footer .footer-legal .social-links a:hover {
-  background-color: rgba(var(--color-white-rgb), 0.2);
+  background-color: rgba(var(--color-black-rgb), 0.2);
 }
 
-.footer .copyright strong {
+.footer .copyright {
   font-weight: 400;
+  margin-top: 50px;
+  font-size: 16px;
+  line-height: 16px;
+  color: #777;
 }
 
 .footer .credits {
@@ -1946,7 +2021,7 @@ section {
 }
 
 .footer .credits a {
-  color: var(--color-white);
+  color: var(--color-black);
 }
 
 
@@ -2587,6 +2662,43 @@ section {
   text-align: left;
 }
 
+
+@media(max-width:992px){
+  .handshakes {
+    padding: 60px 0px;
+    margin-top: -20px;
+  }
+  .handshakes h1 {
+    font-size:32px; 
+    line-height:45px; 
+  }
+  .handshakes .shakers {
+    margin: 40px 0 0;
+    text-align: center;
+  }
+
+  .handshakes p {
+    font-size: 50px;
+    line-height: 35px;
+    font-weight: 400;
+    margin-bottom: 15px;
+  }
+
+  .handshakes span {
+    color: #f1f1f1;
+    font-size: 20px;
+    line-height: 36px;
+    text-align: center;
+    display: block;
+    margin-bottom: 30px;
+  }
+}
+
+
+
+
+
+
 /* five-highlights */
 .five-highlights {
   padding: 60px 160px;
@@ -2715,11 +2827,25 @@ section {
 @media(max-width:992px){
   .team-highlights {
     padding: 60px 0px;
-    margin-top: -20px;
+    margin-top: -120px;
   }
   .team-highlights .highlight-center-image {
     margin-top: 0;
     margin-bottom: 0;
+  }
+  .team-highlights .highlights h2 {
+    text-align: center;
+    margin-left: 20px;
+    font-size: 28px;
+    line-height: 48px;
+  }
+  .team-highlights .highlights p {
+    color:#777;
+    font-weight: 400;
+    text-align: center;
+    margin-left: 20px;
+    font-size: 20px;
+    line-height: 32px;
   }
 }
 
@@ -2734,6 +2860,7 @@ section {
   color: #fff; 
   background-color: #0a2640;
   font-family: var(--font-primary);
+  margin-bottom: 0;
 }
 .our-values .value-box {
   max-width: 800px;
