--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -2,7 +2,7 @@
 /* ==================== GLOBAL STYLES ======================= */
 @import url("https://rsms.me/inter/inter.css");
 html {
-  font-family: "Inter", sans-serif;
+  font-family: "Manrope", sans-serif;
   font-size: 15px;
 }
 
