--- a/public/css/main.css
+++ b/public/css/main.css
@@ -279,14 +279,18 @@ section {
   }
   .navbar a.btn {
     background-color:#fff; 
-    color:#444; 
-    width: 90px; 
-    text-align:center;
-    padding: 10px; 
+    color:#0A2640; 
+    font-weight: 700;
+    text-align:center !important;
+    padding: 10px 40px; 
     border-radius:25px; 
     margin:20px;
   }
-  
+  .navbar a.btn:hover {
+    border-color: #0A2640;
+    color: #0A2640;
+  }
+
   .navbar .dropdown span {
     /* letter-spacing: 2px; */
     font-size: 15px;
